Model deployed time to integrate

--- a/Training/training_new.ipynb
+++ b/Training/training_new.ipynb
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "2721bfcd",
    "metadata": {},
    "outputs": [
@@ -1780,6 +1780,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:tensorflow:Assets written to: rnn_model_noisy/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: rnn_model_noisy/assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved artifact at 'rnn_model_noisy'. The following endpoints are available:\n",
+      "\n",
+      "* Endpoint 'serve'\n",
+      "  args_0 (POSITIONAL_ONLY): TensorSpec(shape=(None, 1, 27), dtype=tf.float32, name='keras_tensor_22')\n",
+      "Output Type:\n",
+      "  TensorSpec(shape=(None, 1), dtype=tf.float32, name=None)\n",
+      "Captures:\n",
+      "  139657465687952: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465687184: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465691792: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465691600: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465686416: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465690256: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465689680: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657465685648: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657463759696: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  139657463763344: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
       "Noisy RNN model saved successfully.\n",
       "Noisy preprocessing pipeline saved successfully.\n",
       "Noisy feature information saved successfully.\n"
@@ -1788,7 +1819,8 @@
    ],
    "source": [
     "# Save the noisy data RNN model\n",
-    "noisy_models['RNN'].save('rnn_model_noisy.keras')\n",
+    "# noisy_models['RNN'].save('rnn_model_noisy.keras')\n",
+    "noisy_models['RNN'].export('rnn_model_noisy')\n",
     "print(\"Noisy RNN model saved successfully.\")\n",
     "\n",
     "# Save the noisy preprocessing pipeline\n",
