--- a/Training/training_new.ipynb
+++ b/Training/training_new.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Training New Bot Detection Models\n",
-    "Using RNN, LSTM, and ConvLSTM models with suitable complexity.\n",
-    "Adapted from experiment.ipynb style."
+    "Using RNN, LSTM, and ConvLSTM models with suitable complexity."
    ]
   },
   {
@@ -2385,18 +2384,6 @@
    "display_name": "env1",
    "language": "python",
    "name": "env1"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
   }
  },
  "nbformat": 4,
